# ImageSegmentation

./: CMakeLists.txt  COMMANDS  README.md  Results.xlsx
edison/: CMakeLists.txt  CMakeListsNEW.txt  CMakeListsOLD.txt
edison/code/: likwid-stuff.h  ms_filter_cuda.cu  ms_filter_omp.cpp  ms_filter_serial.cpp  region_creator.cpp  region_creator.h
edison/segm/: ms.h  msImageProcessor.cpp  msImageProcessor.h  tdef.h
main/: CMakeLists.txt  main.cpp
main/imageProcessor/cimg/: CMakeLists.txt
main/imageProcessor/cimg/src/: images.cpp
